[package]
name = "image_disector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-compression = { version = "0.3.15", features = ["tokio", "gzip"] }
bytes = "1.4.0"
flate2 = "1.0.25"
futures-core = "0.3.26"
memmap2 = "0.5.10"
oci-spec = "0.6.0"
rayon = "1.7.0"
reqwest = { version = "0.11.14", features = ["json", "gzip", "stream"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tar = "0.4.38"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"
