[package]
name = "sink"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features=["backtrace"]}
bytes = "1.4.0"
clap = { version = "4.1.8", features = ["derive"] }
crossterm = "0.27.0"
flate2 = "1.0.25"
futures = "0.3.26"
futures-core = "0.3.26"
indicatif = { version = "0.17.3", features = ["tokio"] }
memmap2 = "0.5.10"
oci-spec = "0.6.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
rayon = "1.7.0"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.9.9"
tar = "0.4.38"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tui-tree-widget = "0.13.0"
url = "2.3.1"

[profile.release]
debug = true
